[package]
name = "nostr_page"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.0"
gloo = "0.8.0"
wasm-bindgen= "0.2.79"
web-sys = {version = "0.3.61", features = ["HtmlInputElement"]}
serde_json = "1.0.96"
url = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
secp256k1 = "0.27.0"
sha2 = "0.10.6"
hex = "0.4.3"
reqwest = { version = "0.11", default-features= false, features = ["json"] }
base64 = "0.21.0"
sha1 = "0.10.5"
getrandom = { version = "0.2", default-features = false, features = ["js"] }
wasm-bindgen-futures = "0.4.34"
reqwasm = "0.5.0"
instant = { version = "0.1.12", features = [ "wasm-bindgen", "inaccurate" ] }
gloo-net = "0.2.6"
futures = "0.3.28"
qrcode = "0.12.0"
image = "0.23.14"
